# nordicnest_bf_game

./: Cargo.toml  README.md  TODO  bevy_game.js
.github/workflows/: ci.yaml  deploy-page.yaml  release.yaml
assets/models/: truck.gltf
src/: debug.rs  game_over.rs  lib.rs  main.rs  parcels.rs  player.rs  prelude.rs  state.rs  ui.rs  warehouse.rs
wasm/: index.html
