[package]
name = "bevy_blackfriday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy_embedded_assets = "0.6.1"
bevy_sprite3d = "2.3.0"
bevy_asset_loader = { version = "0.14", features = ["2d"] }
bevy_rapier3d = { version = "0.19.0", features = [
    "simd-stable",
    "debug-render",
] }
bevy_mod_fbx = "0.3"

bevy_spatial = { version = "0.4.0", features = ["rstar"] }
rand = "0.8.5"

# Keep the following in sync with Bevy's dependencies
winit = { version = "0.27.5", default-features = false }
image = { version = "0.24.5", default-features = false }
