[package]
name = "nordicnest_bf"
version = "0.1.0"
edition = "2021"
exclude = ["assets"]

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.9", features = [
    "bevy_asset",
    "bevy_winit",
    "render",
    "png",
    "x11",
    "hdr",
] }
bevy_embedded_assets = "0.6.1"
bevy_sprite3d = "2.3.1"
bevy_asset_loader = { version = "0.14", features = ["3d", "2d"] }
bevy_rapier3d = { version = "0.19.0", features = ["simd-stable", "parallel"] }
bevy_spatial = { version = "0.4.0", features = ["rstar"] }
bevy-inspector-egui = "0.14.0"
bevy_mod_outline = "0.3"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
bevy_tweening = "0.6"
rand = "0.8.5"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.27", default-features = false }
image = { version = "0.24", default-features = false }
